--- a/willIInterviewFE/src/style.css
+++ b/willIInterviewFE/src/style.css
@@ -59,9 +59,10 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
 }
 
